# OC_P13_LETTINGS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  start_render.sh
.circleci/: config.yml
doc/: conf.py
doc/_build/doctrees/: continuous_delivery.doctree  environment.pickle  index.doctree
doc/_build/doctrees/usage/: 0_context.doctree  1_getting started.doctree  1_install.doctree  (+22 more)
doc/_build/html/: .buildinfo  continuous_delivery.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/usage/: 0_context.rst  1_getting_started.rst  3_docker.rst  4_continuous_integration.rst  5_continuous_delivery.rst
doc/usage/docker/: 1_docker.rst  2_docker-compose.rst
home/: add_log.py  urls.py  views.py
home/static/css/: styles.css
home/static/js/: scripts.js
home/templates/: 404.html  500.html  503.html  base.html  index.html
lettings/: admin.py  apps.py  models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py
lettings/templates/lettings/: index.html  letting.html
oc_lettings_site/: asgi.py  urls.py  wsgi.py
oc_lettings_site/settings/: local.py  production.py
profiles/: models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/templates/profiles/: index.html  profile.html
requirements/: local.txt  local_freeze.txt  production.txt  production_freeze.txt
tests/: __init__.py
tests/home/: test_urls.py  test_views.py
tests/lettings/: test_models.py  test_urls.py  test_views.py
tests/profiles/: test_models.py  test_urls.py  test_views.py
(+77 files in other folders)
